tests/baselines/reference/jsdocTemplateTag7.errors.txt
a.js(2,14): error TS1273: 'private' modifier cannot appear on a type parameter


==== a.js (1 errors) ====
    /**
     * @template private T
                 ~~~~~~~
!!! error TS1273: 'private' modifier cannot appear on a type parameter
     * @param {T} x
     * @returns {T}
     */
    function f1(x) {
        return x;
    }
    